--- a/style.css
+++ b/style.css
@@ -52,4 +52,12 @@ body {
     width: 30%;
     padding: 40px 0;
     border: solid 3px #ffffff;
+    transition: all 0.07s;
 }
+
+.trans {
+    transform: scale(1.1);
+    background-color: #ffffff !important;
+    color: #00004d !important;
+}
+
